--- a/chapter2_objects_in_python.ipynb
+++ b/chapter2_objects_in_python.ipynb
@@ -444,32 +444,48 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import ecommerce.products\n",
     "product = ecommerce.products.Product()"
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "from ecommerce.products import Product\n",
     "product = Product()"
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "from ecommerce import products\n",
     "product = products.Product()"
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "The import statements separate packages or modules using the period as a separator."
    ]
@@ -479,6 +495,613 @@
    "metadata": {},
    "source": [
     "## Relative imports"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Case Study"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "build a simple command-line notebook application"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "First, define folder structure for this project\n",
+    "\n",
+    "parent_directory/\n",
+    "       notebook.py\n",
+    "       menu.py\n",
+    "       command_option.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "define the Note class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 'bcd'\n",
+    "c = 'abcde'\n",
+    "a in c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import datatime\n",
+    "\n",
+    "class Note:\n",
+    "    \n",
+    "    t = []\n",
+    "    \n",
+    "    def __init__(self, memo, tags, creation_date):\n",
+    "        self.memo = memo\n",
+    "        t.append(self.tags)\n",
+    "        self.creation_date = today()\n",
+    "        \n",
+    "    def match(self, search_filter):\n",
+    "        \"\"\"This method will accept a string and can tell us if a note matches the\n",
+    "            string without accessing the attributes directly\n",
+    "            \n",
+    "           input: search_filter\n",
+    "           output: a list of memo matched with search_filter\n",
+    "            \"\"\"\n",
+    "        if search_filter in self.memo or search_filter in tags:\n",
+    "            \n",
+    "            return self.memo\n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "# Store the next available id for all new notes\n",
+    "last_id = 0\n",
+    "\n",
+    "class Note:\n",
+    "    '''Represent a note in a notebook. Match against a string in searches \n",
+    "    and store tags for each notes.'''\n",
+    "    \n",
+    "    def __init__(self, memo, tags = ''):\n",
+    "        '''initialize a note with memo and additional space-seperated tags. \n",
+    "        Automatically set the note's craetion date and a unique id.'''\n",
+    "        self.memo = memo\n",
+    "        self.tags = tags\n",
+    "        self.creation_date = datetime.date.today()\n",
+    "        global last_id\n",
+    "        #last_id = 0\n",
+    "        last_id += 1\n",
+    "        self.id = last_id\n",
+    "        \n",
+    "        \n",
+    "    def match(self, filter):\n",
+    "        '''Determine if this note matches the filter text.\n",
+    "        Return True if it matches, False otherwise.\n",
+    "        \n",
+    "        Search is case sensitive and matches both text and tags.'''\n",
+    "        \n",
+    "        return filter in self.memo or filter in self.tags\n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "n1 = Note(\"hello first\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "n2 = Note(\"hello again\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n1.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello first'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n1.memo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n2.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n1.match('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n2.match('second')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{('ab', '1'), ('bc', 'bd'), ('c', 'b')}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notes = [('ab','1'),('bc','bd'),('c', 'b'),('d','a')]\n",
+    "set([i for i in notes if 'b' in i[0] ] + [i for i in notes if 'b' in i[1] ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# let me give it a shot\n",
+    "class Notebook:\n",
+    "    \n",
+    "    def __init__(self, notes):\n",
+    "        '''Initialize a notebook with a list of notes'''\n",
+    "        #my question: is notes a list of memo? or a list of combinitaiton of memo, tags and note_id?\n",
+    "        notes = []\n",
+    "    \n",
+    "    def search(self, filter):\n",
+    "        '''Return a list of notes that match the filter text\n",
+    "        '''\n",
+    "        ###########################################\n",
+    "        #my thoughts: notes is a list, let's say if notes = ['ab','bc','c','d'] and filter is 'b', then notes['ab','bc']\n",
+    "        #will return back. Then we can just get a comprehension list [i for i in notes if filter in i]\n",
+    "        # how can I connect with with Note class？\n",
+    "        return list(set([i for i in notes if 'b' in i[0] ] + [i for i in notes if 'b' in i[1]]))\n",
+    "        \n",
+    "    \n",
+    "    def new_note(self, memo, tags = ''):\n",
+    "        '''Add new note with memo and tags\n",
+    "        '''\n",
+    "        notes.append((memo, tags))\n",
+    "        \n",
+    "        \n",
+    "    def modify_memo(self, note_id, new_memo):\n",
+    "        '''Modify a memo'''\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    def modify_tags(self, note_id, tags):\n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Notebook:\n",
+    "    '''Represent a collection of notes that can be tagged,\n",
+    "    modified, and searched.'''\n",
+    "    def __init__(self):\n",
+    "        '''Initialize a notebook with an empty list.'''\n",
+    "        self.notes = []\n",
+    "    def new_note(self, memo, tags = ''):\n",
+    "        '''Create a new note and add it to the list.'''\n",
+    "        self.notes.append(Note(memo, tags))\n",
+    "    def modify_memo(self, note_id, memo):\n",
+    "        '''Find the note with the given id and change its memo to the given value.'''\n",
+    "        for note in self.notes:\n",
+    "            if note.id == note_id:\n",
+    "                note.memo = memo\n",
+    "                break\n",
+    "    \n",
+    "    def modify_tags(self, note_id, tags):\n",
+    "        '''Find the note with the given id and change ists tags to the given value.'''\n",
+    "        for note in self.notes:\n",
+    "            if note.id == note_id:\n",
+    "                note.tags = tags\n",
+    "                break\n",
+    "                \n",
+    "    def search(self, filter):\n",
+    "        '''Find all notes that match the given filter string.'''\n",
+    "        return [note for note in self.notes if note.match(filter)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n = Notebook()\n",
+    "n.new_note(\"hello\")\n",
+    "n.new_note(\"hello again\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Note at 0x10c85f0b8>, <__main__.Note at 0x10c7470b8>]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.notes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.notes[0].id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n.modify_memo(9,\"hello world again\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello world again'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.notes[0].memo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Note at 0x10c84b2e8>, <__main__.Note at 0x10c84b208>]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.notes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cold is a little messy. Our modify_tags and modify _memo methods are almost identical."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def _final_note(self, note_id):\n",
+    "    '''Locate the note with the given if.'''\n",
+    "    for note in self.notes:\n",
+    "        if note.id == note_id:\n",
+    "            return note\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def modify_memo(self, note_id, memo):\n",
+    "    '''Find the note with the given id and change its memo to the given value.'''\n",
+    "    self._find_note(note_id).memo = memo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look at the menu interface. The interface simply needs to present a menu and allow the user to input choices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from notebook import Notebook, Note"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Menu:\n",
+    "    '''Display a menu and respond to choices when run.'''\n",
+    "    def __init__(self):\n",
+    "        self.notebook = Notebook()\n",
+    "        self.choices = {\n",
+    "            \"1\": self.show_notes,\n",
+    "            \"2\": self.search_notes,\n",
+    "            \"3\": self.add_note,\n",
+    "            \"4\": self.modify_note,\n",
+    "            \"5\": self.quit\n",
+    "        }\n",
+    "    def display_menu(self):\n",
+    "        print(\"\"\"\n",
+    "        Notebook Menu\n",
+    "        \n",
+    "        1. Show all Notes\n",
+    "        2. Search Notes\n",
+    "        3. Add Note\n",
+    "        4. Modify Note\n",
+    "        5. Quit\"\"\")\n",
+    "        \n",
+    "    def run(self):\n",
+    "        '''Display the menu and respond to choices.'''\n",
+    "        while True:\n",
+    "            self.display_menu()\n",
+    "            choice = input(\"Enter an option: \")\n",
+    "            action = self.choieces.get（choice）\n",
+    "            if action:\n",
+    "                action()\n",
+    "            else:\n",
+    "                print(\"{0} is not a valid choice\".format(choice))\n",
+    "    def show_notes(self, notes=None):\n",
+    "        if not notes:\n",
+    "            notes = self.notebook.notes\n",
+    "        for note in notes:\n",
+    "            print (\"{0}: (1)\\n{2}\".format(note.id, note.tags, note.memo))\n",
+    "    def search_notes(self):\n",
+    "        filter = input(\"Search for: \")\n",
+    "        notes = self.notebook.search(filter)\n",
+    "        self.show_notes(notes)\n",
+    "    def add_note(self):\n",
+    "        memo = input(\"Enter a memo: \")\n",
+    "        self.notebook.new_note(memo)\n",
+    "        print(\"Your note has been added.\")\n",
+    "        \n",
+    "    def modify_note(self):\n",
+    "        id = input(\"Enter a note id: \")\n",
+    "        memo = input(\"Enter a memo: \")\n",
+    "        tags = input(\"Enter tags: \")\n",
+    "        if memo:\n",
+    "            self.notebook.modify_memo(id, memo)\n",
+    "        if tags:\n",
+    "            self.notebook.modify_tags(id, tags)\n",
+    "    def quit(self):\n",
+    "        print(\"Thank you for using your notebook today.\")\n",
+    "        sys.exist(0）\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    Menu().run()"
    ]
   },
   {
